Prueba responsive Copilot

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <h1><span>Francisco Melo</span></h1>
             <span class="cen">Portafolio</span>
-            <a class="button" href="https://linktr.ee/falquior" target=”_blank”>Linktree</a>
+            <a class="button" href="https://linktr.ee/falquior" target="_blank">Linktree</a>
         </div>
     </div>
     <h1 class="isTitle">Videogames</h1>
@@ -23,7 +23,7 @@
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <a href="https://falquior.itch.io/meeting-with-coffee" target=”_blank”><img
+                    <a href="https://falquior.itch.io/meeting-with-coffee" target="_blank"><img
                             src="https://img.itch.zone/aW1nLzEyMjMxMzc0LnBuZw==/315x250%23c/4LOD2D.png" /></a>
                 </div>
                 <div class="swiper-slide">
@@ -63,7 +63,7 @@
     <div class="presentation">
         <div></div>
         <div class="presimage">
-            <img class="myPhoto" src="myPhoto.png">
+            <img class="myPhoto" src="myPhoto.png" alt="My Photo">
         </div>
         <div class="prestext">
             <h1>Sobre mi</h1>
@@ -76,7 +76,7 @@
         <div></div>
     </div>
     <div class="boton">
-        <a class="CV" href="https://linktr.ee/falquior" target=”_blank”>Hoja de vida</a>
+        <a class="CV" href="https://linktr.ee/falquior" target="_blank">Hoja de vida</a>
     </div>
     <div class="final-image"></div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
