Responsive big changes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Falquior</title>
 </head>
@@ -13,8 +14,10 @@
 <body>
     <div class="main-image">
         <div class="container">
-            <h1><span>Francisco Melo</span></h1>
-            <span class="cen">Portafolio</span>
+            <div class="title-box">
+                <h1><span>Francisco Melo</span></h1>
+                <span class="subtitle">Portafolio</span>
+            </div>
             <a class="button" href="https://linktr.ee/falquior" target="_blank">Linktree</a>
         </div>
     </div>
@@ -46,15 +49,6 @@
                     <a href="https://www.behance.net/gallery/165535993/MC-Truffle-(Personaje-original-OC)"
                         target="_blank"><img
                             src="https://mir-s3-cdn-cf.behance.net/projects/808/4c24e0165535993.Y3JvcCwxNDQwLDExMjYsMCww.png" /></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://www.behance.net/gallery/165770431/Miriam-Sprite" target="_blank"><img
-                            src="https://mir-s3-cdn-cf.behance.net/projects/808/738c1b165770431.Y3JvcCwxMjAwLDkzOCwwLDEzMA.png" /></a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://www.behance.net/gallery/166383903/Espadachina-Oscura-(Personaje-original-OC)"
-                        target="_blank"><img
-                            src="https://mir-s3-cdn-cf.behance.net/projects/808/d116d7166383903.Y3JvcCwxMjAwLDkzOCwwLDEzMA.png" /></a>
                 </div>
             </div>
             <div class="swiper-pagination"></div>
