Modificaciones de carrusel y sobre mi
Carrusel cambia disposición según la resolución de la pantalla

--- a/index.html
+++ b/index.html
@@ -21,101 +21,109 @@
             <a class="button" href="https://linktr.ee/falquior" target="_blank">Linktree</a>
         </div>
     </div>
-    <h1 class="isTitle">Videojuegos</h1>
-    <div class="videogamecarousel">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <a href="https://falquior.itch.io/meeting-with-coffee" target="_blank">
-                        <img src="https://img.itch.zone/aW1nLzEyMjMxMzc0LnBuZw==/315x250%23c/4LOD2D.png" />
-                    </a>
-                    <p class="carousel-title">Meeting with Coffee</p>
+    <div class="carousel-container">
+        
+        <div class="videogamecarousel">
+            <h1 class="isTitle">Videojuegos</h1> <!-- Título para la sección de videojuegos -->
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="https://falquior.itch.io/meeting-with-coffee" target="_blank">
+                            <img src="https://img.itch.zone/aW1nLzEyMjMxMzc0LnBuZw==/315x250%23c/4LOD2D.png" />
+                        </a>
+                        <p class="carousel-title">Meeting with Coffee</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://falquior.itch.io/recuerdos-de-guerra" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" />
+                        </a>
+                        <p class="carousel-title">Recuerdos de Guerra</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Game 3</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Game 4</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Game 5</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Game 6</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Game 7</p>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                    <a href="https://falquior.itch.io/recuerdos-de-guerra" target="_blank">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Placeholder_view_vector.svg/681px-Placeholder_view_vector.svg.png" />
-                    </a>
-                    <p class="carousel-title">Recuerdos de Guerra</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://example.com" target="_blank">
-                        <img src="https://via.placeholder.com/300" />
-                    </a>
-                    <p class="carousel-title">Game 3</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://example.com" target="_blank">
-                        <img src="https://via.placeholder.com/300" />
-                    </a>
-                    <p class="carousel-title">Game 4</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://example.com" target="_blank">
-                        <img src="https://via.placeholder.com/300" />
-                    </a>
-                    <p class="carousel-title">Game 5</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://example.com" target="_blank">
-                        <img src="https://via.placeholder.com/300" />
-                    </a>
-                    <p class="carousel-title">Game 6</p>
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://mir-s3-cdn-cf.behance.net/projects/808/229b0a165289915.Y3JvcCwyODgwLDIyNTIsMCwzMTM.png" alt="Autorretrato Placeholder" />
-                    <p class="carousel-title">Placeholder</p>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper-pagination"></div>
         </div>
-    </div>
 
-    <h1 class="isTitle">Pixel Art</h1>
-    <div class="pixelcarousel">
-        <div class="swiper mySwiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <a href="https://www.behance.net/gallery/165289915/Autorretrato-en-Pixel-Art" target="_blank">
-                        <img src="https://mir-s3-cdn-cf.behance.net/projects/808/229b0a165289915.Y3JvcCwyODgwLDIyNTIsMCwzMTM.png" />
-                    </a>
-                    <p class="carousel-title">Autorretrato</p>
+
+        <div class="pixelcarousel">
+            <h1 class="isTitle">Pixel Art</h1> <!-- Título para la sección de Pixel Art -->
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="https://www.behance.net/gallery/165289915/Autorretrato-en-Pixel-Art" target="_blank">
+                            <img src="https://mir-s3-cdn-cf.behance.net/projects/808/229b0a165289915.Y3JvcCwyODgwLDIyNTIsMCwzMTM.png" />
+                        </a>
+                        <p class="carousel-title">Autorretrato</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://www.behance.net/gallery/165535993/MC-Truffle-(Personaje-original-OC)" target="_blank">
+                            <img src="https://mir-s3-cdn-cf.behance.net/projects/808/4c24e0165535993.Y3JvcCwxNDQwLDExMjYsMCww.png" />
+                        </a>
+                        <p class="carousel-title">MC Truffle</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://www.behance.net/gallery/165770431/Miriam-Sprite" target="_blank">
+                            <img src="https://mir-s3-cdn-cf.behance.net/projects/808/738c1b165770431.Y3JvcCwxMjAwLDkzOCwwLDEzMA.png" />
+                        </a>
+                        <p class="carousel-title">Miriam Sprite</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://www.behance.net/gallery/166383903/Espadachina-Oscura-(Personaje-original-OC)" target="_blank">
+                            <img src="https://mir-s3-cdn-cf.behance.net/projects/808/d116d7166383903.Y3JvcCwxMjAwLDkzOCwwLDEzMA.png" />
+                        </a>
+                        <p class="carousel-title">Espadachina Oscura</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Pixel Art 5</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Pixel Art 6</p>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="https://example.com" target="_blank">
+                            <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Comingsoon.png" />
+                        </a>
+                        <p class="carousel-title">Pixel Art 7</p>
+                    </div>
                 </div>
-                <div class="swiper-slide">
-                    <a href="https://www.behance.net/gallery/165535993/MC-Truffle-(Personaje-original-OC)" target="_blank">
-                        <img src="https://mir-s3-cdn-cf.behance.net/projects/808/4c24e0165535993.Y3JvcCwxNDQwLDExMjYsMCww.png" />
-                    </a>
-                    <p class="carousel-title">MC Truffle</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://www.behance.net/gallery/165770431/Miriam-Sprite" target="_blank">
-                        <img src="https://mir-s3-cdn-cf.behance.net/projects/808/738c1b165770431.Y3JvcCwxMjAwLDkzOCwwLDEzMA.png" />
-                    </a>
-                    <p class="carousel-title">Miriam Sprite</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://www.behance.net/gallery/166383903/Espadachina-Oscura-(Personaje-original-OC)" target="_blank">
-                        <img src="https://mir-s3-cdn-cf.behance.net/projects/808/d116d7166383903.Y3JvcCwxMjAwLDkzOCwwLDEzMA.png" />
-                    </a>
-                    <p class="carousel-title">Espadachina Oscura</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://example.com" target="_blank">
-                        <img src="https://via.placeholder.com/300" />
-                    </a>
-                    <p class="carousel-title">Pixel Art 5</p>
-                </div>
-                <div class="swiper-slide">
-                    <a href="https://example.com" target="_blank">
-                        <img src="https://via.placeholder.com/300" />
-                    </a>
-                    <p class="carousel-title">Pixel Art 6</p>
-                </div>
-                <div class="swiper-slide">
-                    <img src="https://mir-s3-cdn-cf.behance.net/projects/808/229b0a165289915.Y3JvcCwyODgwLDIyNTIsMCwzMTM.png" alt="Autorretrato Placeholder" />
-                    <p class="carousel-title">Pixel art 7</p>
-                </div>
+                <div class="swiper-pagination"></div>
             </div>
-            <div class="swiper-pagination"></div>
         </div>
     </div>
     <div class="presentation">
@@ -146,7 +154,6 @@
             grabCursor: true,
             centeredSlides: true,
             slidesPerView: "auto",
-            loop: true, // Enable infinite scrolling
             coverflowEffect: {
                 rotate: 20,
                 stretch: 0,
